--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -50,6 +50,7 @@
           }
 
           a {
+            font-size: 0.7rem;
             transition: all 0.5s ease;
             &:hover,
             &:focus {
@@ -66,7 +67,7 @@
   }
 
   .siteLogo {
-    font-size: 1rem;
+    font-size: 1.1rem;
     text-align: center;
     width: 200px;
     height: 30px;
@@ -146,7 +147,6 @@
     position: relative;
   }
 
-
   .team::before {
     z-index: -1;
     content: '';
@@ -157,7 +157,6 @@
     top: -15%;
     left: 50%;
   }
-
 
   .gridContainer {
     .workWithUs {
@@ -189,7 +188,7 @@
       object-fit: cover;
     }
   }
-  
+
   // Blog page styles
 
   .relatedPosts {
@@ -210,7 +209,6 @@
     display: initial;
   }
 
-
   .postComments h3,
   .commentForm h3 {
     text-align: left;
@@ -218,7 +216,7 @@
 
   .userForm {
     align-items: flex-start;
-    
+
     input,
     .userComment {
       text-align: left;
@@ -251,12 +249,13 @@
     width: 80%;
   }
 
-  .siteNavList {
+  .siteNavList li .innerList li a {
     font-size: 0.8rem;
   }
 
   .siteLogo {
     font-size: 1.3rem;
+    top: 3px;
   }
 
   .bottomList {
@@ -516,20 +515,24 @@
 // ** LARGE DESKTOP MEDIA QUERIES
 
 @media (min-width: 1200px) {
- 
- .siteNavList {
+  .siteNavList li .innerList li a {
     font-size: 1rem;
   }
 
   .siteLogo {
     font-size: 1.5rem;
+    top: 1px;
+  }
+
+  h2.siteLogo {
+    margin: 20px 0;
   }
 
   // Features section styles
   .features {
     background-position: 90% 0;
   }
-  
+
   // Team section styles
   .gridContainer {
     .gridTextContainer {
@@ -537,14 +540,14 @@
         font-size: 0.8rem;
       }
     }
-    
+
     .workWithUs {
       a {
         font-size: 1.5rem;
       }
     }
   }
-  
+
   // Footer Styles
   .footerContainer {
     p,
@@ -552,12 +555,12 @@
     a {
       font-size: 0.8rem;
     }
-  
+
     h5 {
       font-size: 1.1rem;
     }
   }
-  
+
   .subscribeNow {
     div {
       justify-content: flex-end;
